fixed layout issue

--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@ body{
     margin:0px;
     display:flex;
     flex-direction: column;
-    position:'relative';
+    position:relative;
     overflow-x: hidden;
     color:var(--text-color);
     margin-left: var(--page-margin);
     margin-right:var(--page-margin);
     min-width: 375px;
+    align-items: center;
 }
 
 #home, #about, #services {
@@ -106,7 +107,7 @@ a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    position:'relative'
+    position:relative;
 }
 
 .homepage-image-container{
@@ -140,8 +141,8 @@ a:hover{
     color:black;
     font-weight:400;
     transform: scaleY(1.07); 
+    width: 100%;
 }
-
 
 .contact-container {
   display: flex;
@@ -236,7 +237,6 @@ a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    scroll-margin-top: 175px; /* equal to header height */
     max-width: var(--max-width);
     align-self: center;
 }
@@ -292,8 +292,7 @@ a:hover{
     display:flex;
     flex-direction:column;
     width:100%;
-    margin-right: var(--page-margin);
-    margin-left: var(--page-margin);
+    align-self: center;
 }
 
 /* SERVICES SECTION LAYOUT */
@@ -301,7 +300,7 @@ a:hover{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 20px;
+  gap: 85px;
   width: 100%;
   max-width: var(--max-width);
   margin-top:10px;
@@ -521,6 +520,7 @@ div h3.service-title{
 
     .services-outer-container{
         flex-direction: column;
+        gap: 20px;
     }
 
     .services-list{
